config maven et pleins de petits trucs