@@ -3,17 +3,24 @@ package com.modis.ainimals.ainimals.utils;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 
 import javax.servlet.ServletContext;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.multipart.MultipartFile;
+
+import com.modis.ainimals.ainimals.upload.ImagesAndLabelsController;
 
 public class PythonUtil {
 
 	@Autowired
 	static ServletContext context;
+	static Logger logger = LoggerFactory.getLogger(ImagesAndLabelsController.class);
 	
 	/**
 	 *  Lancement de script Python
@@ -24,27 +31,25 @@ public class PythonUtil {
 	 * @throws IOException
 	 * @throws InterruptedException 
 	 */
-	public static int execScript(String sScriptName, String sUploadDir, String sFileName,
-            MultipartFile multipartFile) throws IOException, InterruptedException {
+	public static int execScript(String sScriptName, String sUploadDir) throws IOException, InterruptedException {
 		
-		ProcessBuilder processBuilder = new ProcessBuilder("python", getPythonScriptPath(sScriptName));
-	    processBuilder.redirectErrorStream(true);
-	    Process process = processBuilder.start();
+		 Process process = null;
+	     try{
+	             process = Runtime.getRuntime().exec("python "+ sScriptName + " " + sUploadDir);
+	     }catch(Exception e) {
+	    	// TODO Logger
+	        System.out.println("Exception Raised" + e.toString());
+	     }
+	     InputStream stdout = process.getInputStream();
+	     BufferedReader reader = new BufferedReader(new InputStreamReader(stdout,StandardCharsets.UTF_8));
+	 
 	    int intCode = process.waitFor();
 	    // lecture du output du script
-	    BufferedReader bfr = new BufferedReader(new InputStreamReader(process.getInputStream()));
 	    String line = "";
-	    while ((line = bfr.readLine()) != null) {
-	    	// TODO Logger
-	    	System.out.println(line);
+	    while ((line = reader.readLine()) != null) {
+	    	logger.info("-- Output Python | " + line); 
 	    }   
 	    intCode = process.waitFor();
 		return intCode;
     }
-
-	private static String getPythonScriptPath(String sScriptName) {
-		   
-		return context.getRealPath("/") + File.separator + "python" + File.separator + sScriptName;
-	}
-	
 }
